--- a/Quizapp/pom.xml
+++ b/Quizapp/pom.xml
@@ -41,7 +41,11 @@
 		    <artifactId>tomcat-jasper</artifactId>
 		    <version>10.1.19</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
