--- a/Quizapp/src/main/resources/application.properties
+++ b/Quizapp/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=Gv@9443430629
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.springframework.data=debug
+spring.devtools.restart.enabled=true
 
